fast-track-training_week-1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8demoapp-svc
  namespace: app
spec:
  selector:
    app: k8demoapp
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
