fast-track-training_week-1/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8demo-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: k3s.local
    http: 
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: k8demoapp-svc
            port:
              number: 7000
